﻿Revision history for {{$dist->name}}

{{$NEXT}}
 [00 Minor]
 - tests updated.

 [Dependencies::Stats]
 - Dependencies changed since 1.000003, see misc/*.deps* for details
 - develop: +1 ↑1 (suggests: ↑2)
 - test: +1 (recommends: ↑1)

 [Tests]
 - Tests rewritten with dztest

1.000003 2014-08-15T21:17:57Z
 [00 Trivial]
 - CPANDAY!
 - no code changes.
 - whitespace adjusted.

 [Dependencies::Stats]
 - Dependencies changed since 1.000002, see misc/*.deps* for details
 - develop: +1 (suggests: ↑1)

 [Misc]
 - Improve source side POD to reduce build side whitespace.

1.000002 2014-08-05T03:20:44Z
 [00 Trivial]
 - no code changes.
 - Test code updated.
 - Pod::Weaver -SingleEncoding turned on

 [Dependencies::Stats]
 - Dependencies changed since 1.000001, see misc/*.deps* for details
 - develop: (suggests: ↑1)
 - test: -3

1.000001 2014-07-30T04:06:36Z
 [Bugfix]
 - Declare test requires for a Path::Tiny that can export tempdir

 [Dependencies::Stats]
 - Dependencies changed since 1.000000, see misc/*.deps* for details
 - test: ↑1 -1 (recommends: ↑1 -2)

1.000000 2014-07-29T10:55:00Z
 [00 Major]
 - Packaging changes that may affect downstream who work by hand

 [01 Version Scheme Change]
 - Migrating from x.yyyyyyyy ( = 8 ) to x.yyyyyy ( = 6 )
 - This is the primary reason for the 1.x on the box.
 - https://questhub.io/realm/perl/quest/5388d3a9bbd0be2224000129

 [02 Toolkit Change]
 - Shipping is now done exclusively with ExtUtils::MakeMaker
 - https://questhub.io/realm/perl/quest/5388cc12bbd0be5b2500011f
 - This means it may be some more time before this actually has tests.
 - No More Dogfood

 [03 Misc]
 - Handling failure cases with MI slightly improved.
 - Depending on a version of ::Tempdir that acutally emits files.
 - Moved to kentnl org

 [Dependencies::Stats]
 - Dependencies changed since 0.02000000, see misc/*.deps* for details
 - build: -1
 - configure: ↓1 (recommends: +1)
 - develop: +44 -2 (recommends: -1, suggests: +1 ↑1)
 - runtime: +3 ↑2 -1