@@ -1,6 +1,9 @@
 This file contains changes in REQUIRED dependencies for standard CPAN phases (configure/build/runtime/test)
 
 1.001000
+ [Added / runtime requires]
+ - Dist::Zilla::Util::ConfigDumper
+
  [Added / test requires]
  - Dist::Zilla::Util::Test::KENTNL 1.003001
 
