@@ -4,6 +4,9 @@ This file contains ALL changes in dependencies in both REQUIRED / OPTIONAL depen
  [Added / develop requires]
  - Dist::Zilla::Plugin::Author::KENTNL::RecommendFixes 0.001001
 
+ [Added / runtime requires]
+ - Dist::Zilla::Util::ConfigDumper
+
  [Added / test requires]
  - Dist::Zilla::Util::Test::KENTNL 1.003001
 
