@@ -3,10 +3,12 @@
 {{$NEXT}}
  [00 Minor]
  - tests updated.
+ - uses dump_config
 
  [Dependencies::Stats]
  - Dependencies changed since 1.000003, see misc/*.deps* for details
  - develop: +1 ↑1 (suggests: ↑2)
+ - runtime: +1
  - test: +1 (recommends: ↑1)
 
  [Tests]
